--- a/src/pages/services.njk
+++ b/src/pages/services.njk
@@ -4,121 +4,219 @@ permalink: /services/
 layout: "layouts/base.html"
 ---
 
-<div class="bg-off-white relative overflow-hidden">
-	<div class="hidden xl:block absolute -bottom-8 -right-40">
-		<img src="/assets/img/gray-kisses.png" alt="gray kisses">
+<div class="relative overflow-hidden bg-off-white">
+	<div class="absolute -bottom-8 -right-40 hidden xl:block">
+		<img
+			src="/assets/img/gray-kisses.png"
+			alt="gray kisses"
+		/>
 	</div>
-	<div class="container pt-56 md:pt-48 pb-32 md:pb-24 relative z-20">
-		<div class="hidden xl:block absolute top-[23.5rem] right-6">
-			<img src="/assets/img/kiss-pink-dark.png" class="h-24 sm:h-28 xl:h-36 2xl:h-[10.5rem] transform rotate-[-20deg]" alt="pink kiss image">
+	<div class="container relative z-20 pb-32 pt-56 md:pb-24 md:pt-48">
+		<div class="absolute right-6 top-[23.5rem] hidden xl:block">
+			<img
+				src="/assets/img/kiss-pink-dark.png"
+				class="h-24 rotate-[-20deg] transform sm:h-28 xl:h-36 2xl:h-[10.5rem]"
+				alt="pink kiss image"
+			/>
 		</div>
-		<div class="xl:px-20 2xl:px-40 relative z-30">
-			<div class="md:w-4/5 lg:w-3/5 2xl:w-1/2 mx-auto md:text-center">
-				<span class="flex md:justify-center items-baseline">
+		<div class="relative z-30 xl:px-20 2xl:px-40">
+			<div class="mx-auto md:w-4/5 md:text-center lg:w-3/5 2xl:w-1/2">
+				<span class="flex items-baseline md:justify-center">
 					<span>
-						<h3 class="text-h-4 md:text-h-3 xl:text-h-2 text-black font-bold">Onze behandelingen</h3>
+						<h3 class="text-h-4 md:text-h-3 xl:text-h-2 font-bold text-black">Onze behandelingen</h3>
 					</span>
-					<span class="pb-4 block">
-						<img src="/assets/img/icon-green-stars.png" class="h-[60px]" alt="icon stars">
+					<span class="block pb-4">
+						<img
+							src="/assets/img/icon-green-stars.png"
+							class="h-[60px]"
+							alt="icon stars"
+						/>
 					</span>
 				</span>
-				<span class="text-black text-h-5 block pt-4 xl:pt-7">Bij FillerHouse hebben we álle kennis en ervaring in huis om jouw beauty uitdagingen te lijf te gaan.</span>
+				<span class="text-h-5 block pt-4 text-black xl:pt-7"
+					>Bij FillerHouse hebben we álle kennis en ervaring in huis om jouw beauty uitdagingen te lijf te gaan.</span
+				>
 			</div>
-			<div class="pt-12 lg:pt-16 xl:pt-24 grid grid-cols-1 lg:grid-cols-2 gap-7 xl:gap-11">
-				<div class="bg-white rounded-[25px] text-center">
+			<div class="grid grid-cols-1 gap-7 pt-12 lg:grid-cols-2 lg:pt-16 xl:gap-11 xl:pt-24">
+				<div class="rounded-[25px] bg-white text-center">
 					<span>
-						<img src="/assets/img/services-08.jpg" class="rounded-t-[25px] h-[225px] md:h-[357px] w-full object-cover" alt="botox image">
+						<img
+							src="/assets/img/services-08.jpg"
+							class="h-[225px] w-full rounded-t-[25px] object-cover md:h-[357px]"
+							alt="botox image"
+						/>
 					</span>
-					<div class="px-4 md:px-8 xl:px-11 pb-7 pt-7 xl:pb-8">
-						<h3 class="text-h-4 xl:text-h-3 font-bold pb-4 xl:pb-6">Botox</h3>
-						<p class="text-h-5 lg:min-h-[128px] lg:line-clamp-4">Omdat botox de activiteit van de spieren vermindert, is het ideaal om rimpels te verminderen die ontstaan door spierspanning. Door het te injecteren in de spiertjes in het gezicht, zullen de rimpels die ontstaan verdwijnen of verminderen</p>
-						<div class="mt-10 md:mt-7 flex justify-center">
-							<a href="/" class="text-center !bg-[#e5055b] btn btn-primary md:!px-10">Meer over Botox</a>
+					<div class="px-4 pb-7 pt-7 md:px-8 xl:px-11 xl:pb-8">
+						<h3 class="text-h-4 xl:text-h-3 pb-4 font-bold xl:pb-6">Botox</h3>
+						<p class="text-h-5 lg:line-clamp-4 lg:min-h-[128px]">
+							Omdat botox de activiteit van de spieren vermindert, is het ideaal om rimpels te verminderen die ontstaan
+							door spierspanning. Door het te injecteren in de spiertjes in het gezicht, zullen de rimpels die ontstaan
+							verdwijnen of verminderen
+						</p>
+						<div class="mt-10 flex justify-center md:mt-7">
+							<a
+								href="/"
+								class="btn btn-primary !bg-[#e5055b] text-center md:!px-10"
+								>Meer over Botox</a
+							>
 						</div>
 					</div>
 				</div>
-				<div class="bg-white rounded-[25px] text-center">
+				<div class="rounded-[25px] bg-white text-center">
 					<span>
-						<img src="/assets/img/services-09.jpg" class="rounded-t-[25px] h-[225px] md:h-[357px] w-full object-cover" alt="fillers image">
+						<img
+							src="/assets/img/services-09.jpg"
+							class="h-[225px] w-full rounded-t-[25px] object-cover md:h-[357px]"
+							alt="fillers image"
+						/>
 					</span>
-					<div class="px-4 md:px-8 xl:px-11 pb-7 pt-7 xl:pb-8">
-						<h3 class="text-h-4 xl:text-h-3 font-bold pb-4 xl:pb-6">Fillers</h3>
-						<p class="text-h-5 lg:min-h-[128px] lg:line-clamp-4">Omdat botox de activiteit van de spieren vermindert, is het ideaal om rimpels te verminderen die ontstaan door spierspanning. Door het te injecteren in de spiertjes in het gezicht, zullen de rimpels die ontstaan verdwijnen of verminderen</p>
-						<div class="mt-10 md:mt-7 flex justify-center">
-							<a href="/" class="text-center !bg-[#e5055b] btn btn-primary md:!px-10">Meer over Fillers</a>
+					<div class="px-4 pb-7 pt-7 md:px-8 xl:px-11 xl:pb-8">
+						<h3 class="text-h-4 xl:text-h-3 pb-4 font-bold xl:pb-6">Fillers</h3>
+						<p class="text-h-5 lg:line-clamp-4 lg:min-h-[128px]">
+							Omdat botox de activiteit van de spieren vermindert, is het ideaal om rimpels te verminderen die ontstaan
+							door spierspanning. Door het te injecteren in de spiertjes in het gezicht, zullen de rimpels die ontstaan
+							verdwijnen of verminderen
+						</p>
+						<div class="mt-10 flex justify-center md:mt-7">
+							<a
+								href="/"
+								class="btn btn-primary !bg-[#e5055b] text-center md:!px-10"
+								>Meer over Fillers</a
+							>
 						</div>
 					</div>
 				</div>
-				<div class="bg-white rounded-[25px] text-center">
+				<div class="rounded-[25px] bg-white text-center">
 					<span>
-						<img src="/assets/img/services-10.jpg" class="rounded-t-[25px] h-[225px] md:h-[357px] w-full object-cover" alt="PDO Draadlift image">
+						<img
+							src="/assets/img/services-10.jpg"
+							class="h-[225px] w-full rounded-t-[25px] object-cover md:h-[357px]"
+							alt="PDO Draadlift image"
+						/>
 					</span>
-					<div class="px-4 md:px-8 xl:px-11 pb-7 pt-7 xl:pb-8">
-						<h3 class="text-h-4 xl:text-h-3 font-bold pb-4 xl:pb-6">PDO Draadlift</h3>
-						<p class="text-h-5 lg:min-h-[128px] lg:line-clamp-4">Een draadlift behandeling is ideaal voor het liften van het gezicht zonder operatie!</p>
-						<div class="mt-10 md:mt-7 flex justify-center">
-							<a href="/" class="text-center !bg-[#e5055b] btn btn-primary md:!px-10">Meer over de PDO Draadlift</a>
+					<div class="px-4 pb-7 pt-7 md:px-8 xl:px-11 xl:pb-8">
+						<h3 class="text-h-4 xl:text-h-3 pb-4 font-bold xl:pb-6">PDO Draadlift</h3>
+						<p class="text-h-5 lg:line-clamp-4 lg:min-h-[128px]">
+							Een draadlift behandeling is ideaal voor het liften van het gezicht zonder operatie!
+						</p>
+						<div class="mt-10 flex justify-center md:mt-7">
+							<a
+								href="/"
+								class="btn btn-primary !bg-[#e5055b] text-center md:!px-10"
+								>Meer over de PDO Draadlift</a
+							>
 						</div>
 					</div>
 				</div>
-				<div class="bg-white rounded-[25px] text-center">
+				<div class="rounded-[25px] bg-white text-center">
 					<span>
-						<img src="/assets/img/services-11.jpg" class="rounded-t-[25px] h-[225px] md:h-[357px] w-full object-cover" alt="Lipo injections image">
+						<img
+							src="/assets/img/services-11.jpg"
+							class="h-[225px] w-full rounded-t-[25px] object-cover md:h-[357px]"
+							alt="Lipo injections image"
+						/>
 					</span>
-					<div class="px-4 md:px-8 xl:px-11 pb-7 pt-7 xl:pb-8">
-						<h3 class="text-h-4 xl:text-h-3 font-bold pb-4 xl:pb-6">Lipo injections</h3>
-						<p class="text-h-5 lg:min-h-[128px] lg:line-clamp-4">Bij lipo injections worden de werkzame stoffen direct onder de huid in het vetweefsel aangebracht. De vetcel-oplossende werking start meteen en houdt nog enkele weken aan. Iedereen vanaf 18 jaar kan deze behandeling ondergaan.</p>
-						<div class="mt-10 md:mt-7 flex justify-center">
-							<a href="/" class="text-center !bg-[#e5055b] btn btn-primary md:!px-10">Meer over Lipo injections</a>
+					<div class="px-4 pb-7 pt-7 md:px-8 xl:px-11 xl:pb-8">
+						<h3 class="text-h-4 xl:text-h-3 pb-4 font-bold xl:pb-6">Lipo injections</h3>
+						<p class="text-h-5 lg:line-clamp-4 lg:min-h-[128px]">
+							Bij lipo injections worden de werkzame stoffen direct onder de huid in het vetweefsel aangebracht. De
+							vetcel-oplossende werking start meteen en houdt nog enkele weken aan. Iedereen vanaf 18 jaar kan deze
+							behandeling ondergaan.
+						</p>
+						<div class="mt-10 flex justify-center md:mt-7">
+							<a
+								href="/"
+								class="btn btn-primary !bg-[#e5055b] text-center md:!px-10"
+								>Meer over Lipo injections</a
+							>
 						</div>
 					</div>
 				</div>
-				<div class="bg-white rounded-[25px] text-center">
+				<div class="rounded-[25px] bg-white text-center">
 					<span>
-						<img src="/assets/img/services-12.jpg" class="rounded-t-[25px] h-[225px] md:h-[357px] w-full object-cover" alt="Semi permanente make-up image">
+						<img
+							src="/assets/img/services-12.jpg"
+							class="h-[225px] w-full rounded-t-[25px] object-cover md:h-[357px]"
+							alt="Semi permanente make-up image"
+						/>
 					</span>
-					<div class="px-4 md:px-8 xl:px-11 pb-7 pt-7 xl:pb-8">
-						<h3 class="text-h-4 xl:text-h-3 font-bold pb-4 xl:pb-6">Semi permanente make-up</h3>
-						<p class="text-h-5 lg:min-h-[128px] lg:line-clamp-4">Wil jij ‘s ochtends meteen ready to go zijn en uren make-up tijd besparen? Dan is semi permanente make-up iets voor jou!
-							De PMU blijft gemiddeld 1 tot 4 jaar zitten, afhankelijk van leeftijd, blootstelling aan de zon en algemene huidverzorging. </p>
-						<div class="mt-10 md:mt-7 flex justify-center">
-							<a href="/" class="text-center !bg-[#e5055b] btn btn-primary md:!px-10">Meer over PMU</a>
+					<div class="px-4 pb-7 pt-7 md:px-8 xl:px-11 xl:pb-8">
+						<h3 class="text-h-4 xl:text-h-3 pb-4 font-bold xl:pb-6">Semi permanente make-up</h3>
+						<p class="text-h-5 lg:line-clamp-4 lg:min-h-[128px]">
+							Wil jij ‘s ochtends meteen ready to go zijn en uren make-up tijd besparen? Dan is semi permanente make-up
+							iets voor jou! De PMU blijft gemiddeld 1 tot 4 jaar zitten, afhankelijk van leeftijd, blootstelling aan de
+							zon en algemene huidverzorging.
+						</p>
+						<div class="mt-10 flex justify-center md:mt-7">
+							<a
+								href="/"
+								class="btn btn-primary !bg-[#e5055b] text-center md:!px-10"
+								>Meer over PMU</a
+							>
 						</div>
 					</div>
 				</div>
-				<div class="bg-white rounded-[25px] text-center">
+				<div class="rounded-[25px] bg-white text-center">
 					<span>
-						<img src="/assets/img/services-13.jpg" class="rounded-t-[25px] h-[225px] md:h-[357px] w-full object-cover" alt="Peelings image">
+						<img
+							src="/assets/img/services-13.jpg"
+							class="h-[225px] w-full rounded-t-[25px] object-cover md:h-[357px]"
+							alt="Peelings image"
+						/>
 					</span>
-					<div class="px-4 md:px-8 xl:px-11 pb-7 pt-7 xl:pb-8">
-						<h3 class="text-h-4 xl:text-h-3 font-bold pb-4 xl:pb-6">Peelings</h3>
-						<p class="text-h-5 lg:min-h-[128px] lg:line-clamp-4">Nog geen tekst</p>
-						<div class="mt-10 md:mt-7 flex justify-center">
-							<a href="/" class="text-center !bg-[#e5055b] btn btn-primary md:!px-10">Meer over Peelings</a>
+					<div class="px-4 pb-7 pt-7 md:px-8 xl:px-11 xl:pb-8">
+						<h3 class="text-h-4 xl:text-h-3 pb-4 font-bold xl:pb-6">Peelings</h3>
+						<p class="text-h-5 lg:line-clamp-4 lg:min-h-[128px]">Nog geen tekst</p>
+						<div class="mt-10 flex justify-center md:mt-7">
+							<a
+								href="/"
+								class="btn btn-primary !bg-[#e5055b] text-center md:!px-10"
+								>Meer over Peelings</a
+							>
 						</div>
 					</div>
 				</div>
-				<div class="bg-white rounded-[25px] text-center">
+				<div class="rounded-[25px] bg-white text-center">
 					<span>
-						<img src="/assets/img/services-14.jpg" class="rounded-t-[25px] h-[225px] md:h-[357px] w-full object-cover" alt="Brows image">
+						<img
+							src="/assets/img/services-14.jpg"
+							class="h-[225px] w-full rounded-t-[25px] object-cover md:h-[357px]"
+							alt="Brows image"
+						/>
 					</span>
-					<div class="px-4 md:px-8 xl:px-11 pb-7 pt-7 xl:pb-8">
-						<h3 class="text-h-4 xl:text-h-3 font-bold pb-4 xl:pb-6">Brows</h3>
-						<p class="text-h-5 lg:min-h-[128px] lg:line-clamp-4">Jouw wenkbrauwen in perfect shape bij FillerHouse! Tijdens een van de Brows classic behandelingen brengen we jouw wenkbrauwen naar jouw wensen in shape (en kleur). Zo weet jij zeker dat jouw brows in topconditie zijn.</p>
-						<div class="mt-10 md:mt-7 flex justify-center">
-							<a href="/" class="text-center !bg-[#e5055b] btn btn-primary md:!px-10">Meer over Brows</a>
+					<div class="px-4 pb-7 pt-7 md:px-8 xl:px-11 xl:pb-8">
+						<h3 class="text-h-4 xl:text-h-3 pb-4 font-bold xl:pb-6">Brows</h3>
+						<p class="text-h-5 lg:line-clamp-4 lg:min-h-[128px]">
+							Jouw wenkbrauwen in perfect shape bij FillerHouse! Tijdens een van de Brows classic behandelingen brengen
+							we jouw wenkbrauwen naar jouw wensen in shape (en kleur). Zo weet jij zeker dat jouw brows in topconditie
+							zijn.
+						</p>
+						<div class="mt-10 flex justify-center md:mt-7">
+							<a
+								href="/"
+								class="btn btn-primary !bg-[#e5055b] text-center md:!px-10"
+								>Meer over Brows</a
+							>
 						</div>
 					</div>
 				</div>
-				<div class="bg-white rounded-[25px] text-center">
+				<div class="rounded-[25px] bg-white text-center">
 					<span>
-						<img src="/assets/img/services-15.jpg" class="rounded-t-[25px] h-[225px] md:h-[357px] w-full object-cover" alt="fillers image">
+						<img
+							src="/assets/img/services-15.jpg"
+							class="h-[225px] w-full rounded-t-[25px] object-cover md:h-[357px]"
+							alt="fillers image"
+						/>
 					</span>
-					<div class="px-4 md:px-8 xl:px-11 pb-7 pt-7 xl:pb-8">
-						<h3 class="text-h-4 xl:text-h-3 font-bold pb-4 xl:pb-6">Wimpers</h3>
-						<p class="text-h-5 lg:min-h-[128px] lg:line-clamp-4">Nog geen tekst</p>
-						<div class="mt-10 md:mt-7 flex justify-center">
-							<a href="/" class="text-center !bg-[#e5055b] btn btn-primary md:!px-10">Meer over Wimpers</a>
+					<div class="px-4 pb-7 pt-7 md:px-8 xl:px-11 xl:pb-8">
+						<h3 class="text-h-4 xl:text-h-3 pb-4 font-bold xl:pb-6">Wimpers</h3>
+						<p class="text-h-5 lg:line-clamp-4 lg:min-h-[128px]">Nog geen tekst</p>
+						<div class="mt-10 flex justify-center md:mt-7">
+							<a
+								href="/"
+								class="btn btn-primary !bg-[#e5055b] text-center md:!px-10"
+								>Meer over Wimpers</a
+							>
 						</div>
 					</div>
 				</div>
