--- a/src/_includes/partials/header.html
+++ b/src/_includes/partials/header.html
@@ -1,4 +1,4 @@
-<div class="fixed inset-x-0 top-0 z-50">
+<div class="fixed inset-x-0 top-0 z-[999]">
 	<div class="container py-12 lg:py-16 xl:py-20">
 		<div class="flex items-center justify-center gap-10 lg:justify-between">
 			<a
@@ -14,6 +14,28 @@
 			<div class="hidden lg:block">
 				<button class="btn btn-primary">Menu</button>
 			</div>
+		</div>
+	</div>
+</div>
+
+<div class="fixed inset-0 z-50 hidden h-screen w-full bg-pink-medium">
+	<div class="container mt-76">
+		<div class="w-1/2">
+			<p class="text-2xl font-bold text-white">Jouw beautygeheim heet <span class="text-lime">FillerHouse</span></p>
+			<p class="mt-2 text-lg text-white">Dé cosmetische beauty specialist in de Hoeksche Waard</p>
+		</div>
+
+		<div class="mt-14 flex gap-24">
+			<ul>
+				<li>
+					<a
+						href="/"
+						class="text-[37px]/[44px] font-bold text-white"
+					>
+						Home
+					</a>
+				</li>
+			</ul>
 		</div>
 	</div>
 </div>
